Fix broken CSS

--- a/osmfoundation.less
+++ b/osmfoundation.less
@@ -3,7 +3,6 @@
 
 @font-face {
     font-family: 'Palanquin';
-    local("Palanquin"),
     src: url('fonts/Palanquin-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
@@ -11,7 +10,6 @@
 
 @font-face {
     font-family: 'Palanquin';
-    local("Palanquin Bold"),
     src: url('fonts/Palanquin-Bold.woff') format('truetype');
     font-weight: bold;
     font-style: normal;
